css/samsok.css
input.form-control {
    font-size: 24px;
    height: auto;
}

.form-group button {
    font-size: 24px;
    height: auto;
}

.vcenter {
    display: inline-block;
    vertical-align: middle;
    float: none;
}

.fewHitsWarning {
    background-color: #fed136;
    padding-left: 0.5ex;
    padding-right: 0.5ex;
    border-radius: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
}

.catalogues-list {
    padding-inline-start: 10px;
}

.btn-primary {
    color: black;
    font-weight: 500;
    text-transform: none;
}

header .intro-text {
    padding-top: 300px;
    padding-bottom: 250px;
}

.rh-background {
    background: rgba(34, 34, 34, 0.95);
    padding-top: 1.5em;
    padding-bottom: 3em;
    padding-left: 3em;
    padding-right: 3em;
}

.rh-background h1 {
    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
    color: #da725d
}

.catalogues-list {
    margin-bottom: 2em;
}

.rh-filter {
    margin-top: 2ex;
    margin-bottom: 3ex;
}

section#searchresult {
    background: #f5f5f5;
}

.panel-default>.panel-heading {
    color: #333;
    background-color: rgba(34, 34, 34, 0.08);
    border-color: #ddd;
    border-bottom: 0;
}

.panel-default>.panel-heading h2 {
    font-weight: 500;
    font-size: 30px;
}

#search-results-heading {
    margin-top: 1em;
}

.btn-link:focus {
    background:rgba(92, 184, 92, 0.2);
    border-radius: 4em;
    padding:1ex;
}

.navbar-default .navbar-brand {
    color: #da725d;
}

